--- a/src/chat/Dialog.less
+++ b/src/chat/Dialog.less
@@ -24,6 +24,8 @@
   }
   
   .dialog-text{
+    word-break: break-word;
+    white-space: break-spaces;
     width: max-content;
     max-width: 66%;
     font-size: 15px;
