feat: 完成了角色添加、对话的角色选择

--- a/src/chat/Dialog.less
+++ b/src/chat/Dialog.less
@@ -7,12 +7,12 @@
   flex-direction: row;
   margin: 16px 0;
   
-  .dialog-side{
+  .dialog-side {
     flex-shrink: 0;
-    width: 40px;
-    height: 40px;
-    border-radius: 15%;
     margin: 0 14px;
+    .ant-avatar {
+      border-radius: 15%;
+    }
   }
   
   .dialog-name{
