feat: 调整了文字过长时的样式

--- a/src/chat/Dialog.less
+++ b/src/chat/Dialog.less
@@ -15,12 +15,15 @@
     }
   }
   
-  .dialog-name{
+  .dialog-name {
     color: #888;
     font-size: 12px;
     line-height: 14px;
     margin-top: 2px;
     margin-bottom: 8px;
+    .dialog-name-wrapper {
+      max-width: 200px;
+    }
   }
   
   .dialog-text{
@@ -72,6 +75,9 @@
   
   .dialog-name{
     text-align: right;
+    .dialog-name-wrapper {
+      float: right;
+    }
   }
   
   .dialog-text{
