feat: 初步完成了本地选择头像

--- a/src/pages/Control/index.less
+++ b/src/pages/Control/index.less
@@ -21,3 +21,10 @@
   border: 1px solid black;
   box-shadow: 0 0 4px #aaa;
 }
+
+.lp-choose-side {
+  border-radius: 9999px;
+  &:hover{
+    box-shadow: 0 0 6px orange;
+  }
+}
